--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,14 @@
     "content_scripts": [
       {
         "matches": ["<all_urls>"],
-        "js": ["content-script.js"]
+        "js": ["content-script.js"],
+        "css": ["tailwind-output.css"]
+      }
+    ],
+    "web_accessible_resources": [
+      {
+        "resources": ["tailwind-output.css"],
+        "matches": ["<all_urls>"]
       }
     ],
     "action": {
