add tailwind css watcher to rebuild css automatically

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "background.js",
   "scripts": {
-    "build-css": "npx tailwindcss -o tailwind-output.css --minify"
+    "build-css": "npx tailwindcss -o tailwind-output.css --minify",
+    "watch-css": "npx tailwindcss -i ./tailwind.css -o ./tailwind-output.css --watch"
   },
   "keywords": [],
   "author": "",
