--- a/manifest.json
+++ b/manifest.json
@@ -7,6 +7,9 @@
     "background": {
       "service_worker": "background.js"
     },
+    "side_panel": {
+      "default_path": "sidepanel.html"
+    },
     "content_scripts": [
       {
         "matches": ["<all_urls>"],
